# SI-Fish

./: .gitignore  CMakeLists.txt  Point.cpp  Point.h  PrimitiveCylindre.cpp  PrimitiveCylindre.h  PrimitiveSphere.cpp  PrimitiveSphere.h  PrimitiveTorus.cpp  PrimitiveTorus.h  PrimitiveTrunquedPyramid.cpp  PrimitiveTrunquedPyramid.h  README.md  cube.cpp
